[package]
name = "pyrrhus"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
actix-rt = "2.7.0"
actix-swagger = "0.3.1"
actix-test = "0.1.0"
actix-web = "4"
awc = "3.0.0"
serde = "1.0.142"

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
lto = true # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"
