[package]
name = "pyrrhus"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
actix-rt = "2.7.0"
actix-swagger = "0.3.1"
actix-test = "0.1.0"
actix-web = "4"
awc = "3.0.0"
base64 = "0.20.0"
encoding = "0.2.33"
env_logger = "0.9.0"
futures = "0.3"
libucl = "0.2.3"
log = "0.4"
serde = "1.0.142"
serde_json = "1.0"
sha1_smol = "1.0.0"
utoipa = {version = "2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "2", features = ["actix-web"] }


[profile.release]
opt-level = "z"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
lto = true # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"
